[metadata]
name = heterogeneous-mttdl-estimate
version = 0.1.0
author = Francisco Maturana
author_email = francisco.matu@gmail.com
description = Code for calculating and estimating the MTTDL (mean time to data loss) of a stripe over devices with heterogeneous failure rates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Thesys-lab/heterogeneous-mttdl-estimation

[options]
python_requires = >=3.6